--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,26 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        Gráfica
+        <app-dona title="Ventas"></app-dona>
+    </div>
+    <div class="col-6  col-md-6">
+        <app-dona 
+            [labels]="labels1"
+            [data]="data1"
+            title="ComprasX">
+        </app-dona>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        Gráfica
+        <app-dona title="Cambios"> </app-dona>
+
+    </div>
+    <div class="col-6">
+        Gráfica
+        <app-dona title="Compras 2"></app-dona>
+
+    </div>
+</div>
