--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -13,13 +13,13 @@
                         <li><a href="javascript:void()">My Balance</a></li>
                         <li><a href="javascript:void()">Inbox</a></li>
                         <li><a routerLink="account-setting">Account Setting</a></li>
-                        <li><a routerLink="/login">Logout</a></li>
+                        <li> <a (click)="logout()" class="cursor">Logout</a></li>
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
 
-                <li *ngFor="let item of menuItems"> 
+                <li *ngFor="let item of sidebarService.menu"> 
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                         <i [class]="item.icono"></i>
                         <span class="hide-menu">
